--- a/pipeline/qpid/Makefile
+++ b/pipeline/qpid/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -g -Wall -std=c++11 -O2 -I ./vendor -I ./src
 CFLAGS_AMOS = -Wno-deprecated -O2
 LDFLAGS = -lz -pthread
 
-VPATH=obj:bin:src
+VPATH=obj:bin:src:vendor
 
 .PHONY = amos
 
