--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/thread_pool"]
 	path = vendor/thread_pool
 	url = https://github.com/progschj/ThreadPool.git
+[submodule "vendor/edlib"]
+	path = vendor/edlib
+	url = https://github.com/Martinsos/edlib.git
