qpid: abandoned support for reading all formats except .afg (#41)

--- a/pipeline/qpid/Makefile
+++ b/pipeline/qpid/Makefile
@@ -1,11 +1,8 @@
 CC = g++
 CFLAGS = -g -Wall -std=c++11 -O2 -I ./vendor -I ./src -I ./
-CFLAGS_AMOS = -Wno-deprecated -O2
 LDFLAGS = -lz -pthread
 
 VPATH=obj:bin:src:vendor
-
-.PHONY = amos
 
 align = align/align.h align/align.cpp
 minq = fixed_min_queue/fixed_min_queue.cpp
@@ -16,30 +13,17 @@ overlap = overlap.cpp
 parser = parser/parser.h
 timer = timer/timer.h timer/timer.cpp
 parsero = src/parsero/parsero.h
-AMOS_OBJ_ALL = vendor/AMOS/obj/Overlap_AMOS.o \
-							 vendor/AMOS/obj/Read_AMOS.o \
-							 vendor/AMOS/obj/Sequence_AMOS.o \
-							 vendor/AMOS/obj/Universal_AMOS.o \
-							 vendor/AMOS/obj/Message_AMOS.o \
-							 vendor/AMOS/obj/datatypes_AMOS.o \
-							 vendor/AMOS/obj/BankStream_AMOS.o \
-							 vendor/AMOS/obj/Bank_AMOS.o \
-							 vendor/AMOS/obj/IDMap_AMOS.o \
-							 vendor/AMOS/obj/utility_AMOS.o
 
-default: amos prepare bin/overlap
+default: prepare bin/overlap
 all: prepare bin/test_nucleo_buffer bin/test_align bin/test_minq bin/test_hash_list bin/test_minimizer bin/overlap
 
 prepare:
 	@test -d bin || mkdir bin
 	@test -d obj || mkdir obj
 
-amos:
-	@$(MAKE) -C vendor/AMOS
-
 bin/overlap: $(addprefix obj/,overlap.o align.o nucleo_buffer.o minq.o minimizer.o timer.o)
 	@/bin/echo -e "\e[34m  LD $@ \033[0m"
-	@$(CC) -o $@ $(AMOS_OBJ_ALL) $^ $(LDFLAGS)
+	@$(CC) -o $@ $^ $(LDFLAGS)
 
 bin/test_nucleo_buffer: $(nucleo_buffer) src/nucleo_buffer/test_nucleo_buffer.cpp
 	@/bin/echo -e "\e[34m  CC $@ \033[0m"
