layout: deleting vertices and edges isolated to function; Makefile modified to support edlib

--- a/pipeline/brahle_assembly/Makefile
+++ b/pipeline/brahle_assembly/Makefile
@@ -39,8 +39,8 @@ FLAGS=$(OPTIMIZATION_FLAGS) $(ASORTED_FLAGS) $(WARNING_FLAGS) $(BUILD_NUMBER_LDF
 DEBUG_FLAGS=-g -ggdb -DDEBUG
 NODEBUG_FLAGS=-s -O3 -DNDEBUG
 
-CC=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I$(INCLUDE_VENDOR)
-CCE=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I$(INCLUDE_VENDOR)
+CC=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I$(INCLUDE_VENDOR) -I ./
+CCE=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I$(INCLUDE_VENDOR) -I ./
 
 TEST=unitigging_test
 
