layout: removed support for reading from a bank and fasta/fastq (#41)

--- a/pipeline/brahle_assembly/Makefile
+++ b/pipeline/brahle_assembly/Makefile
@@ -1,7 +1,6 @@
-default: amos prepare main_layout
+default: prepare main_layout
 
 INCLUDE_SRC=./src
-INCLUDE_VENDOR=./vendor
 
 VPATH=src:src/layout:src/overlap:src/test:bin
 
@@ -15,22 +14,11 @@ OBJ=fm_index.o overlap.o better_overlap.o better_read.o read.o sort.o suffix_arr
 OBJ_SPECIAL=sais.o
 ALL_OBJ=$(OBJ) $(OBJ_SPECIAL)
 
-AMOS_OBJ_ALL = vendor/AMOS/obj/Overlap_AMOS.o \
-							 vendor/AMOS/obj/Read_AMOS.o \
-							 vendor/AMOS/obj/Sequence_AMOS.o \
-							 vendor/AMOS/obj/Universal_AMOS.o \
-							 vendor/AMOS/obj/Message_AMOS.o \
-							 vendor/AMOS/obj/datatypes_AMOS.o \
-							 vendor/AMOS/obj/BankStream_AMOS.o \
-							 vendor/AMOS/obj/Bank_AMOS.o \
-							 vendor/AMOS/obj/IDMap_AMOS.o \
-							 vendor/AMOS/obj/utility_AMOS.o
-
 EXE=main_layout
 
 include buildnumber.mak
 
-.PHONY: run valgrind amos
+.PHONY: run valgrind
 
 OPTIMIZATION_FLAGS=-flto -finline-limit=200
 ASORTED_FLAGS=-std=c++11
@@ -39,16 +27,13 @@ FLAGS=$(OPTIMIZATION_FLAGS) $(ASORTED_FLAGS) $(WARNING_FLAGS) $(BUILD_NUMBER_LDF
 DEBUG_FLAGS=-g -ggdb -DDEBUG
 NODEBUG_FLAGS=-s -O3 -DNDEBUG
 
-CC=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I$(INCLUDE_VENDOR)
-CCE=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I$(INCLUDE_VENDOR)
+CC=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I./
+CCE=g++ $(FLAGS) $(DEBUG_FLAGS) -I$(INCLUDE_SRC) -I./
 
 TEST=unitigging_test
 
 prepare:
 	@test -d bin || mkdir bin
-
-amos:
-	@$(MAKE) -C vendor/AMOS
 
 clean:
 	@test -d bin && rm -r bin || true
@@ -72,7 +57,7 @@ $(TEST): %: src/test/%.cpp $(ALL_OBJ)
 # build rule for main executables.
 $(EXE): %: src/%.cpp $(ALL_OBJ) $(BUILD_NUMBER_FILE)
 	@/bin/echo -e "\e[34m  LINK $@ \033[0m"
-	@$(CC) $< $(patsubst %,bin/%,$(ALL_OBJ)) $(AMOS_OBJ_ALL) -lz -o bin/$@
+	@$(CC) $< $(patsubst %,bin/%,$(ALL_OBJ)) -lz -o bin/$@
 
 valgrind: main_layout
 	valgrind bin/main_layout sample/small
