removed linking with zlib package

--- a/pipeline/brahle_assembly/Makefile
+++ b/pipeline/brahle_assembly/Makefile
@@ -52,12 +52,12 @@ sais.o:	src/overlap/sais.c
 # build rule for test executables.
 $(TEST): %: src/test/%.cpp $(ALL_OBJ)
 	@/bin/echo -e "\e[34m  LINK $@ \033[0m"
-	@$(CC) $< $(patsubst %,bin/%,$(ALL_OBJ)) -lz -o bin/$@
+	@$(CC) $< $(patsubst %,bin/%,$(ALL_OBJ)) -o bin/$@
 
 # build rule for main executables.
 $(EXE): %: src/%.cpp $(ALL_OBJ) $(BUILD_NUMBER_FILE)
 	@/bin/echo -e "\e[34m  LINK $@ \033[0m"
-	@$(CC) $< $(patsubst %,bin/%,$(ALL_OBJ)) -lz -o bin/$@
+	@$(CC) $< $(patsubst %,bin/%,$(ALL_OBJ)) -o bin/$@
 
 valgrind: main_layout
 	valgrind bin/main_layout sample/small
