layout: makefile fixed to support edlib

--- a/pipeline/brahle_assembly/Makefile
+++ b/pipeline/brahle_assembly/Makefile
@@ -11,7 +11,7 @@ VPATH=src:src/layout:src/overlap:src/test:bin
 HPP=util.h
 
 OBJ=fm_index.o overlap.o better_overlap.o better_read.o read.o sort.o suffix_array.o suffix_filter.o unitigging.o util.o union_find.o contig.o layout_utils.o vertex.o string_graph.o label.o bubble_walk.o node.o
-OBJ_SPECIAL=sais.o
+OBJ_SPECIAL=sais.o edlib.o
 ALL_OBJ=$(OBJ) $(OBJ_SPECIAL)
 
 EXE=main_layout
@@ -42,6 +42,10 @@ $(HPP): %.h: %.hpp
 	@touch bin/$@
 
 $(OBJ): %.o: %.cpp %.h $(patsubst %,%pp,$(HPP))
+	@/bin/echo -e "\e[34m  CC $@ \033[0m"
+	@$(CC) -c $< -o bin/$@
+
+edlib.o: lib/edlib/src/edlib.cpp
 	@/bin/echo -e "\e[34m  CC $@ \033[0m"
 	@$(CC) -c $< -o bin/$@
 
